# unitree_mujoco

./: .gitignore  readme.md
example/python/: P_model.pt  VIC_2_model.pt  p20_model.pt  p50_model.pt  policy_general.py  policy_general_hw.py  policy_go2.py  policy_go2_loops.py  policy_new_pose.py  policy_vic.py  read_out.py  stand_go2.py  vic1_model.pt  vic2_model.pt  vic3_model.pt  vic_model.pt
example/python/best_models/: fixed_stand_still_cpp.pt  new_policy_model.pt  policy_model.pt  rando_all1_ts.pt
example/python/config/: test.yaml  test_hw.yaml  test_old.yaml  test_old1.yaml  test_pos.yaml  test_pos_hw.yaml
example/python/model/: actor_critic.py  actor_critic_new.py  actor_critic_new_class.py  networks.py
example/python/torchscript_model/: P20_model_hw.pt  P50_model_hw.pt  P_model.pt  VIC_2_model.pt  VIC_2_model_HW.pt
example/ros2/: CMakeLists.txt  package.xml  plotter.py
example/ros2/src/: policy_general.cpp  policy_general_hw.cpp  policy_go2.cpp  policy_pos.cpp  policy_pos20.cpp  policy_pos20_hw.cpp  policy_pos50.cpp  policy_pos50_hw.cpp  stand_go2.cpp  stand_go2_own.cpp
simulate_python/: MJDATA.TXT  config.py  unitree_sdk2py_bridge.py
unitree_robots/go2/: go2.xml  scene.xml  terrain_gaussian.xml  terrain_multi.xml
